@@ -9,7 +9,6 @@ import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriTemplate;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import no.nav.registre.sdforvalter.consumer.rs.request.aareg.AaregRequest;
 import no.nav.registre.sdforvalter.consumer.rs.request.aareg.Arbeidsforhold;
@@ -28,18 +27,19 @@ public class AaregConsumer {
 
     public AaregConsumer(
             RestTemplate restTemplate,
-            @Value("${testnorge.aareg.rest.api.url}") String aaregServerUrl
+            @Value("${consumers.testnorge-aareg.url}") String aaregServerUrl
     ) {
         this.restTemplate = restTemplate;
         this.sendArbeidsforholdTilAaregUrl = new UriTemplate(aaregServerUrl + "/v1/syntetisering/sendTilAareg?fyllUtArbeidsforhold=true");
     }
+
     public void sendArbeidsforhold(AaregListe liste, String environment) {
         List<AaregRequest> requestList = liste.getListe()
                 .stream()
                 // TODO filter arbeidsforhold som allerede eksisterer.
                 // .filter(item -> getArbeidsforhold(item.getFnr(), environment).isEmpty())
                 .map(item -> new AaregRequest(new Arbeidsforhold(item), environment))
-                .collect(Collectors.toList());
+                .toList();
 
         try {
             restTemplate.exchange(
